--- a/Azure-RMSDocs/toc.yml
+++ b/Azure-RMSDocs/toc.yml
@@ -10,14 +10,10 @@
       items:
         - name: Vue d’ensemble
           href: requirements.md
-        - name: Configuration requise d’Azure Active Directory
+        - name: Configuration supplémentaire requise pour Azure Active Directory
           href: requirements-azure-ad.md
-        - name: Prise en charge d’appareils clients pour la protection
-          href: requirements-client-devices.md
         - name: Prise en charge d’applications pour la protection
           href: requirements-applications.md
-        - name: Prise en charge d’un serveur local pour la protection
-          href: requirements-servers.md
     - name: AIP est également connu sous le nom de ...
       href: aka.md
 - name: Démarrages rapides
@@ -94,7 +90,13 @@
     - name: Planifier et préparer le service
       items:
         - name: Feuille de route pour le déploiement
-          href: deployment-roadmap.md
+          items:
+            - name: Vue d’ensemble
+              href: deployment-roadmap.md
+            - name: 'Feuille de route pour la classification, l’étiquetage et la protection'
+              href: deployment-roadmap-classify-label-protect.md
+            - name: Feuille de route pour la protection uniquement (client classique)
+              href: deployment-roadmap-protect-only.md
         - name: Planification et implémentation de la clé de client
           items:
             - name: Types de clé pris en charge
@@ -345,7 +347,7 @@
               href: ./develop/deprecation-notice.md
             - name: Vue d'ensemble
               href: ./develop/overview.md
-            - name: Prendre en main
+            - name: Prise en main
               href: ./develop/get-started.md
               items:
                 - name: Nouveautés
