--- a/mip/develop/toc.yml
+++ b/mip/develop/toc.yml
@@ -63,6 +63,8 @@
   items:
     - name: API
       href: concept-apis-use-cases.md
+    - name: Autorisations d’API de SDK MIP
+      href: concept-api-permissions.md
     - name: Concepts relatifs aux objets MipContext
       href: concept-mipcontext.md
     - name: Stockage de cache
@@ -115,8 +117,12 @@
               href: concept-handler-policy-auditing-cpp.md
         - name: Gestionnaire de l’API de protection (C++)
           href: concept-handler-protection-cpp.md
-    - name: Étiquettes
-      href: concept-classification-labels.md
+    - name: Étiquettes et protection
+      items:
+        - name: Étiquettes
+          href: concept-classification-labels.md
+        - name: Comportement des étiquettes et de la protection
+          href: concept-labeling-and-protection.md
     - name: Métadonnées
       href: concept-mip-metadata.md
     - name: Observateurs pour async (C++)
@@ -131,8 +137,12 @@
           href: concept-async-observers-protection-cpp.md
     - name: Prise en charge du proxy
       href: concept-mip-proxies.md
+    - name: Vue d’ensemble de la découverte de services
+      href: concept-service-discovery.md
     - name: Télémétrie SDK
       href: concept-mip-telemetry.md
+    - name: Types de fichiers pris en charge
+      href: concept-supported-filetypes.md
     - name: Cas d’usage
       items:
         - name: API de fichier - Justification d’action pour abaisser une étiquette de sensibilité sur un fichier
@@ -193,10 +203,10 @@
               href: reference/class_mip_classificationresult.md
             - name: ComputeEngine
               href: reference/class_mip_computeengine.md
-            - name: ComputeEngineContext
-              href: reference/class_mip_computeenginecontext.md
             - name: 'ComputeEngine::Settings'
               href: reference/class_mip_computeengine_settings.md
+            - name: ComputeEngineContext
+              href: reference/class_mip_computeenginecontext.md
             - name: ConditionData
               href: reference/class_mip_conditiondata.md
             - name: ConsentDelegate
@@ -211,6 +221,8 @@
               href: reference/class_mip_customaction.md
             - name: DeprecatedApiError
               href: reference/class_mip_deprecatedapierror.md
+            - name: DetailedClassificationResult
+              href: reference/class_mip_detailedclassificationresult.md
             - name: DocumentState
               href: reference/class_mip_documentstate.md
             - name: Erreur
@@ -267,12 +279,16 @@
               href: reference/class_mip_labelingoptions.md
             - name: LabelNotFoundError
               href: reference/class_mip_labelnotfounderror.md
+            - name: LicenseNotRegisteredError
+              href: reference/class_mip_licensenotregisterederror.md
             - name: LoggerDelegate
               href: reference/class_mip_loggerdelegate.md
             - name: MetadataAction
               href: reference/class_mip_metadataaction.md
             - name: MetadataEntry
               href: reference/class_mip_metadataentry.md
+            - name: MetadataVersion
+              href: reference/class_mip_metadataversion.md
             - name: MipContext
               href: reference/class_mip_mipcontext.md
             - name: MsgAttachmentData
@@ -315,10 +331,16 @@
               href: reference/class_mip_propertydata.md
             - name: ProtectAdhocAction
               href: reference/class_mip_protectadhocaction.md
+            - name: ProtectAdhocDkAction
+              href: reference/class_mip_protectadhocdkaction.md
+            - name: ProtectByEncryptOnlyAction
+              href: reference/class_mip_protectbyencryptonlyaction.md
             - name: ProtectByTemplateAction
               href: reference/class_mip_protectbytemplateaction.md
             - name: ProtectDoNotForwardAction
               href: reference/class_mip_protectdonotforwardaction.md
+            - name: ProtectDoNotForwardDkAction
+              href: reference/class_mip_protectdonotforwarddkaction.md
             - name: ProtectionActionData
               href: reference/class_mip_protectionactiondata.md
             - name: ProtectionDescriptor
@@ -363,7 +385,9 @@
               href: reference/class_mip_removewatermarkaction.md
             - name: RulePackageData
               href: reference/class_mip_rulepackagedata.md
-            - name: 'mip::SensitivityConditionData'
+            - name: SensitiveTypeClassificationData
+              href: reference/class_mip_sensitivetypeclassificationdata.md
+            - name: SensitivityConditionData
               href: reference/class_mip_sensitivityconditiondata.md
             - name: SensitivityTypesRulePackage
               href: reference/class_mip_sensitivitytypesrulepackage.md
@@ -401,6 +425,8 @@
           href: reference/c/functions.md
     - name: Explorateur d’API .NET
       href: /dotnet/api/?term=microsoft.informationprotection
+    - name: Autorisations des API
+      href: concept-api-permissions.md
 - name: Ressources
   items:
     - name: Blog des développeurs
