commit translated contents

--- a/Azure-RMSDocs/toc.yml
+++ b/Azure-RMSDocs/toc.yml
@@ -326,145 +326,13 @@
             - name: Script PowerShell
               href: ./rms-client/fci-script.md
     - name: Développer et personnaliser des applications
-      href: ./develop/developers-guide.md
       items:
-        - name: Guide du développeur
-          href: ./develop/developers-guide.md
-        - name: Microsoft Information Protection
+        - name: Kit SDK Microsoft Information Protection
           href: /information-protection/develop/
-        - name: "Rights Management SDK\_4.2"
-          href: ./develop/active-directory-rights-management-services-multi-platform-thin-client-sdk-portal.md
-          items:
-            - name: Avis de dépréciation
-              href: ./develop/deprecation-notice.md
-            - name: Vue d’ensemble
-              href: ./develop/overview.md
-            - name: Prise en main
-              href: ./develop/get-started.md
-              items:
-                - name: Nouveautés
-                  href: ./develop/release-notes.md
-                - name: Configurer l’environnement de développement
-                  href: ./develop/setup-Developer-environment.md
-                - name: Configuration pour Android
-                  href: ./develop/android-sdk.md
-                - name: Installation Linux
-                  href: ./develop/linux-setup.md
-                - name: Installation iOS et OS X
-                  href: ./develop/ios-sdk.md
-                - name: Configuration pour Windows Phone
-                  href: ./develop/windows-phone-apps.md
-                - name: Configuration pour le Windows Store
-                  href: ./develop/winrt-sdk.md
-                - name: Exemples de code
-                  href: ./develop/code-examples.md
-                - name: Exemples de code Android
-                  href: ./develop/android-code.md
-                - name: Exemples de code Linux
-                  href: ./develop/linux-c-code-examples.md
-                - name: Exemples de code iOS/OS X
-                  href: ./develop/ios-os-x-code-examples.md
-                - name: Ressources de la communauté
-                  href: ./develop/community-resources.md
-            - name: Guide pour développeurs
-              href: ./develop/core-concepts.md
-              items:
-                - name: Procédure d’inscription et d’activation RMS de votre application dans Azure AD
-                  href: ./develop/authentication-integration.md
-                - name: Procédure d’activation de la journalisation des erreurs et des performances
-                  href: ./develop/enabling-logging.md
-                - name: Procédure d’utilisation des droits intégrés
-                  href: ./develop/built-in-rights-usage-restriction-reference.md
-                - name: Procédure d’utilisation du suivi de documents
-                  href: ./develop/how-to-use-document-tracking.md
-            - name: Informations de référence sur les API
-              href: ./develop/api-reference-4-2.md
-              items:
-                - name: Informations de référence sur l’API Android
-                  href: /previous-versions/windows/desktop/msipcthin2/ios
-                - name: Informations de référence sur l’API Linux
-                  href: ./develop/linux-c-api-reference.md
-                - name: "Informations de référence sur l’API iOS / OS\_X"
-                  href: /previous-versions/windows/desktop/msipcthin2/ios
-                - name: Référence de l’API Windows
-                  href: /previous-versions/windows/desktop/msipcthin2/winrt
-        - name: "Rights Management SDK\_2.1"
-          href: ./develop/microsoft-information-protection-and-control-client-portal.md
-          items:
-            - name: Vue d’ensemble
-              href: ./develop/ad-rms-overview.md
-              items:
-                - name: Client
-                  href: ./develop/ad-rms-client.md
-                - name: Serveur
-                  href: ./develop/ad-rms-server.md
-            - name: Prise en main
-              href: ./develop/getting-started-with-ad-rms-2-0.md
-              items:
-                - name: Notes de publication
-                  href: ./develop/release-notes-rtm.md
-                - name: Installer le SDK
-                  href: ./develop/install-the-rms-sdk.md
-                - name: Configurer Visual Studio
-                  href: ./develop/how-to-configure-a-visual-studio-project-to-use-the-ad-rms-sdk-2-0.md
-                - name: Développement de votre application
-                  href: ./develop/developing-your-application.md
-                - name: Test de votre application
-                  href: ./develop/how-to-set-up-your-test-environment.md
-                - name: Déployer en production
-                  href: ./develop/deploying-your-application.md
-            - name: Guide pour développeurs
-              href: ./develop/Developer-notes.md
-              items:
-                - name: Procédure d’utilisation de l’authentification ADAL
-                  href: ./develop/how-to-use-adal-authentication.md
-                  items:
-                    - name: Configurer Azure RMS pour l’authentification ADAL
-                      href: ./develop/adal-auth.md
-                - name: Procédure d’ajout des droits de propriétaire explicites
-                  href: ./develop/add-explicit-owner-rights.md
-                - name: Procédure de débogage d’une application avec gestion des droits
-                  href: ./develop/debugging-applications-that-use-ad-rms.md
-                - name: Procédure de déploiement d’une application
-                  href: ./develop/how-to-deploy-app.md
-                - name: Procédure d’activation du suivi et de la révocation de documents
-                  href: ./develop/tracking-content.md
-                - name: Procédure d’activation des notifications par e-mail
-                  href: ./develop/how-to-enable-email-notification.md
-                - name: Guide pratique pour permettre à votre application de service de fonctionner avec les services RMS cloud
-                  href: ./develop/how-to-use-file-api-with-aadrm-cloud.md
-                - name: Procédure d’installation et de configuration d’un serveur RMS
-                  href: ./develop/how-to-install-and-configure-an-rms-server.md
-                - name: Procédure de définition du mode de sécurité de l’API
-                  href: ./develop/setting-the-api-security-mode-api-mode.md
-                - name: Procédure d’utilisation des paramètres de chiffrement
-                  href: ./develop/working-with-encryption.md
-                - name: Application types (Types d’applications)
-                  href: ./develop/application-types.md
-                - name: Configuration de l’API de fichier
-                  href: ./develop/file-api-configuration.md
-                - name: Guide de sécurité
-                  href: ./develop/security-guidelines.md
-                - name: Formats de fichier pris en charge
-                  href: ./develop/supported-file-formats.md
-                - name: Plateformes prises en charge
-                  href: ./develop/supported-platforms.md
-                - name: Comprendre les restrictions d’utilisation
-                  href: ./develop/understanding-usage-restrictions.md
-            - name: Référence API
-              href: ./develop/api-reference-2-1.md
-              items:
-                - name: Constantes
-                  href: /previous-versions/windows/desktop/msipc/msipc-constants
-                - name: Types de données
-                  href: /previous-versions/windows/desktop/msipc/microsoft-information-protection-and-control-client-data-types
-                - name: Fonctions
-                  href: /previous-versions/windows/desktop/msipc/microsoft-information-protection-and-control-client-functions
-                - name: Structures
-                  href: /previous-versions/windows/desktop/msipc/msipc-structures
-                - name: Codes d'erreur
-                  href: /previous-versions/windows/desktop/msipc/error-codes
-        - name: Terminologie
+        - name: Note de dépréciation des kits de développement logiciel (SDK) Rights Management
+          href: ./develop/deprecation-notice.md
+        - name: Documentation sur les kits de développement logiciel (SDK) Rights Management SDK (dépréciée)
+          href: /previous-versions/azure/rms/rights-management-sdks
 - name: Ressources
   items:
     - name: Forum aux questions
